Configure Google Analytics integration

--- a/css/nords-k7i7y.css
+++ b/css/nords-k7i7y.css
@@ -1544,7 +1544,7 @@ strong {
 }
 
 .live-icon {
-  background-color: #25d366;
+  background-color: #00b94a;
   border-radius: 100%;
   width: 13px;
   height: 13px;
@@ -1713,7 +1713,7 @@ strong {
 }
 
 .livechat-button {
-  background-color: #25d366;
+  background-color: #00b94a;
   border-radius: 200px;
   justify-content: center;
   align-items: center;
