--- a/css/nords-k7i7y.css
+++ b/css/nords-k7i7y.css
@@ -3993,6 +3993,12 @@ strong {
     padding-right: 0;
   }
 
+  .blog-rich-text-block code {
+    padding-left: 14px;
+    padding-right: 14px;
+    font-size: 13px;
+  }
+
   .paragraph {
     font-size: 16px;
     line-height: 1.5;
