--- a/css/nords-k7i7y.css
+++ b/css/nords-k7i7y.css
@@ -219,10 +219,7 @@ strong {
   background-color: var(--white);
   padding: 30px 30px 2px;
   position: fixed;
-  top: 0%;
-  bottom: auto;
-  left: 0%;
-  right: 0%;
+  inset: 0% 0% auto;
 }
 
 .section {
@@ -257,10 +254,7 @@ strong {
   align-items: center;
   display: flex;
   position: absolute;
-  top: auto;
-  bottom: 5%;
-  left: 0%;
-  right: 0%;
+  inset: auto 0% 5%;
   overflow: hidden;
 }
 
@@ -447,8 +441,8 @@ strong {
 ._2-column-grid {
   grid-column-gap: 60px;
   grid-row-gap: 100px;
-  border-top: 1px solid rgba(255, 255, 255, .2);
-  border-bottom: 1px solid rgba(255, 255, 255, .2);
+  border-top: 1px solid #fff3;
+  border-bottom: 1px solid #fff3;
   grid-template-rows: auto;
   grid-template-columns: 2fr 1.5fr;
   align-items: start;
@@ -487,8 +481,8 @@ strong {
 }
 
 .success-message {
-  background-color: rgba(221, 221, 221, 0);
-  border: 1px solid rgba(255, 255, 255, .2);
+  background-color: #ddd0;
+  border: 1px solid #fff3;
   border-radius: 4px;
   font-size: 17px;
   line-height: 25px;
@@ -613,7 +607,7 @@ strong {
 }
 
 .team-social-div.white-content {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   justify-content: flex-start;
   align-items: center;
   margin-top: 0;
@@ -749,7 +743,7 @@ strong {
 }
 
 .success-message-2 {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   border: 1px solid #fff;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -759,9 +753,9 @@ strong {
 .connect-textfield {
   color: var(--black);
   letter-spacing: 2px;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   border: 0 solid #000;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid #0003;
   margin-bottom: 0;
   padding-top: 8px;
   font-family: Roboto, sans-serif;
@@ -770,13 +764,13 @@ strong {
 
 .connect-textfield:active {
   color: var(--black);
-  border-bottom-color: rgba(0, 0, 0, .2);
+  border-bottom-color: #0003;
   font-size: 18px;
 }
 
 .connect-textfield:focus {
   color: var(--black);
-  border-bottom-color: rgba(0, 0, 0, .4);
+  border-bottom-color: #0006;
   font-size: 18px;
 }
 
@@ -789,9 +783,9 @@ strong {
 .textarea {
   color: var(--black);
   letter-spacing: 2px;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   border: 0 solid #000;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid #0003;
   padding-top: 20px;
   padding-bottom: 80px;
   font-family: Roboto, sans-serif;
@@ -805,7 +799,7 @@ strong {
 
 .textarea:focus {
   color: var(--black);
-  border-bottom-color: rgba(0, 0, 0, .4);
+  border-bottom-color: #0006;
 }
 
 .textarea::placeholder {
@@ -827,7 +821,7 @@ strong {
 
 .error-message {
   text-align: center;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   border: 1px solid #fff;
   margin-top: 40px;
   padding: 60px 20px;
@@ -1039,8 +1033,8 @@ strong {
 .newsletter-text {
   background-color: var(--white);
   color: var(--black);
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-bottom-color: rgba(0, 0, 0, .3);
+  border: 1px solid #0000;
+  border-bottom-color: #0000004d;
   min-height: 70px;
   padding-left: 0;
   font-family: Roboto, sans-serif;
@@ -1071,7 +1065,7 @@ strong {
 }
 
 .typography-flex {
-  border: 1px solid rgba(0, 0, 0, .2);
+  border: 1px solid #0003;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
@@ -1106,7 +1100,7 @@ strong {
 
 .color-block.white {
   background-color: var(--white);
-  border: 1px solid rgba(0, 0, 0, .2);
+  border: 1px solid #0003;
 }
 
 .type-column {
@@ -1130,7 +1124,7 @@ strong {
 }
 
 .text-highlight {
-  border: 1px solid rgba(0, 0, 0, .2);
+  border: 1px solid #0003;
   border-radius: 2px;
   width: 50%;
   padding: 30px;
@@ -1289,7 +1283,7 @@ strong {
 }
 
 .licensing-content {
-  border: 1px solid rgba(255, 255, 255, .2);
+  border: 1px solid #fff3;
   border-radius: 4px;
   flex-flow: row;
   min-height: 200px;
@@ -1549,20 +1543,14 @@ strong {
   width: 13px;
   height: 13px;
   position: absolute;
-  top: 2px;
-  bottom: auto;
-  left: 2px;
-  right: auto;
+  inset: 2px auto auto 2px;
 }
 
 .live-icon.profile-image {
   border: 1.5px solid #fff;
   width: 10px;
   height: 10px;
-  top: auto;
-  bottom: 2px;
-  left: auto;
-  right: 2px;
+  inset: auto 2px 2px auto;
 }
 
 .chat-block {
@@ -1578,10 +1566,7 @@ strong {
   align-items: flex-end;
   display: flex;
   position: fixed;
-  top: auto;
-  bottom: 30px;
-  left: auto;
-  right: 30px;
+  inset: auto 30px 30px auto;
 }
 
 .whatsapp-icon {
@@ -1644,7 +1629,7 @@ strong {
 
 .whatsapp-chat {
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid #0000001a;
   border-radius: 20px;
   flex-direction: column;
   width: 300px;
@@ -1692,7 +1677,7 @@ strong {
   z-index: 30;
   cursor: pointer;
   background-color: #000;
-  border: 1px solid rgba(255, 255, 255, .3);
+  border: 1px solid #ffffff4d;
   border-radius: 100%;
   justify-content: center;
   align-items: center;
@@ -1701,10 +1686,7 @@ strong {
   transition: all .3s cubic-bezier(.45, .182, .111, .989);
   display: flex;
   position: relative;
-  top: auto;
-  bottom: 0%;
-  left: auto;
-  right: 0%;
+  inset: auto 0% 0% auto;
 }
 
 .whatsapp-container:hover {
@@ -1804,7 +1786,7 @@ strong {
 }
 
 .slider-testimonials {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   justify-content: flex-start;
   align-items: center;
   max-width: 600px;
@@ -1954,10 +1936,7 @@ strong {
   height: 50px;
   transition: all .2s;
   display: none;
-  top: -40%;
-  bottom: auto;
-  left: auto;
-  right: -32%;
+  inset: -40% -32% auto auto;
 }
 
 .right-arrow:hover {
@@ -2016,7 +1995,7 @@ strong {
 
 .link-11 {
   color: #131313;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   border-radius: 0;
   flex: none;
   justify-content: center;
@@ -2082,8 +2061,7 @@ strong {
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
-  align-items: center;
-  justify-items: start;
+  place-items: center start;
   padding-top: 10px;
   padding-bottom: 10px;
   display: grid;
@@ -2132,7 +2110,7 @@ strong {
 }
 
 .section-3 {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   padding: 120px 4%;
   position: relative;
 }
@@ -2161,7 +2139,7 @@ strong {
 }
 
 .success-message-3 {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #0000;
   width: auto;
   padding-left: 20px;
 }
@@ -2190,7 +2168,7 @@ strong {
   color: #000;
   letter-spacing: -.03em;
   border: 1px #000;
-  border-bottom: 1px solid rgba(15, 21, 41, .1);
+  border-bottom: 1px solid #0f15291a;
   height: 45px;
   margin-bottom: 0;
   padding-top: 0;
@@ -2253,10 +2231,7 @@ strong {
   height: 44px;
   display: flex;
   position: absolute;
-  top: 16px;
-  bottom: auto;
-  left: 16px;
-  right: auto;
+  inset: 16px auto auto 16px;
 }
 
 .wrap-company-icon.large {
@@ -2378,7 +2353,7 @@ strong {
 }
 
 .pricing_inner {
-  background-color: rgba(246, 246, 246, 0);
+  background-color: #f6f6f600;
   border-radius: 13px;
   padding: 1.5rem;
 }
@@ -2443,7 +2418,7 @@ strong {
 .pricing_number-wrap {
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
-  background-color: rgba(44, 44, 44, 0);
+  background-color: #2c2c2c00;
   border-radius: .625rem;
   justify-content: flex-start;
   align-items: center;
@@ -2504,14 +2479,11 @@ strong {
   height: 175%;
   display: block;
   position: absolute;
-  top: auto;
-  bottom: auto;
-  left: auto;
-  right: auto;
+  inset: auto;
 }
 
 .btn-bg.c-18 {
-  background-color: rgba(255, 255, 255, .15);
+  background-color: #ffffff26;
   border-radius: 0%;
   width: 100%;
   min-width: auto;
@@ -2531,7 +2503,7 @@ strong {
 
 .button-3.d-09 {
   color: #fff;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: #fff0;
   background-image: linear-gradient(20deg, #1d4ea5, #5b96fe);
   border-radius: 50rem;
   transition: box-shadow .3s;
@@ -2622,19 +2594,7 @@ strong {
     justify-content: flex-start;
   }
 
-  .connect-textfield, .connect-textfield:active, .connect-textfield:focus {
-    color: var(--black);
-  }
-
-  .connect-textfield::placeholder {
-    color: var(--black);
-  }
-
-  .textarea:active, .textarea:focus {
-    color: var(--black);
-  }
-
-  .textarea::placeholder {
+  .connect-textfield, .connect-textfield:active, .connect-textfield:focus, .connect-textfield::placeholder, .textarea:active, .textarea:focus, .textarea::placeholder {
     color: var(--black);
   }
 
@@ -2644,19 +2604,7 @@ strong {
 }
 
 @media screen and (min-width: 1440px) {
-  .connect-textfield, .connect-textfield:active, .connect-textfield:focus {
-    color: var(--black);
-  }
-
-  .connect-textfield::placeholder {
-    color: var(--black);
-  }
-
-  .textarea, .textarea:active, .textarea:focus {
-    color: var(--black);
-  }
-
-  .textarea::placeholder {
+  .connect-textfield, .connect-textfield:active, .connect-textfield:focus, .connect-textfield::placeholder, .textarea, .textarea:active, .textarea:focus, .textarea::placeholder {
     color: var(--black);
   }
 
@@ -2697,19 +2645,7 @@ strong {
     display: flex;
   }
 
-  .connect-textfield, .connect-textfield:active, .connect-textfield:focus {
-    color: var(--black);
-  }
-
-  .connect-textfield::placeholder {
-    color: var(--black);
-  }
-
-  .textarea:active, .textarea:focus {
-    color: var(--black);
-  }
-
-  .textarea::placeholder {
+  .connect-textfield, .connect-textfield:active, .connect-textfield:focus, .connect-textfield::placeholder, .textarea:active, .textarea:focus, .textarea::placeholder {
     color: var(--black);
   }
 
@@ -2793,14 +2729,14 @@ strong {
   }
 
   .nav-link:hover {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: #fff0;
     text-decoration: underline;
     transform: none;
   }
 
   .nav-link.w--current {
     color: var(--black);
-    background-color: rgba(255, 255, 255, 0);
+    background-color: #fff0;
     text-decoration: underline;
   }
 
@@ -2817,7 +2753,7 @@ strong {
   }
 
   .menu-button.w--open {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: #0000;
     background-image: url('../images/cross_1cross.png');
     background-position: 100%;
     background-repeat: no-repeat;
@@ -2962,11 +2898,7 @@ strong {
     height: 200px;
   }
 
-  .connect-textfield:active, .connect-textfield:focus {
-    color: var(--black);
-  }
-
-  .connect-textfield::placeholder {
+  .connect-textfield:active, .connect-textfield:focus, .connect-textfield::placeholder {
     color: var(--black);
   }
 
@@ -2974,11 +2906,7 @@ strong {
     padding-bottom: 40px;
   }
 
-  .textarea:active, .textarea:focus {
-    color: var(--black);
-  }
-
-  .textarea::placeholder {
+  .textarea:active, .textarea:focus, .textarea::placeholder {
     color: var(--black);
   }
 
@@ -3355,19 +3283,7 @@ strong {
     height: 250px;
   }
 
-  .connect-textfield:active, .connect-textfield:focus {
-    color: var(--black);
-  }
-
-  .connect-textfield::placeholder {
-    color: var(--black);
-  }
-
-  .textarea:active, .textarea:focus {
-    color: var(--black);
-  }
-
-  .textarea::placeholder {
+  .connect-textfield:active, .connect-textfield:focus, .connect-textfield::placeholder, .textarea:active, .textarea:focus, .textarea::placeholder {
     color: var(--black);
   }
 
@@ -3798,11 +3714,7 @@ strong {
     margin-right: 0;
   }
 
-  .connect-textfield:active, .connect-textfield:focus {
-    color: var(--black);
-  }
-
-  .connect-textfield::placeholder {
+  .connect-textfield:active, .connect-textfield:focus, .connect-textfield::placeholder {
     color: var(--black);
   }
 
@@ -3852,11 +3764,7 @@ strong {
     font-size: 16px;
   }
 
-  .newsletter-text:focus {
-    font-size: 16px;
-  }
-
-  .newsletter-text::placeholder {
+  .newsletter-text:focus, .newsletter-text::placeholder {
     font-size: 16px;
   }
 
@@ -4183,7 +4091,7 @@ strong {
   }
 
   .pricing_number-wrap {
-    background-color: rgba(44, 44, 44, 0);
+    background-color: #2c2c2c00;
   }
 
   .hero-button-flex {
